Code initialization & Modification

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <title>Etch a Sketch</title>
 </head>
 <body>
-  
+  <h1>Etch-a-Sketch</h1>
+  <div class="control">
+    <button onclick="ChangeSize();">Change Size</button>
+  </div>
+  <div id="container">
+  </div>
+  <script src="./script.js"></script>
 </body>
 </html>
